tests/e2e/no_effectless_expr5.error
Error: syntax error in story at line 1, column 1

1|    1+2-3+5
      ^^^^^^^

E0161: Effectless expressions without assignment not allowed.
